(fix) Add text wrap for anchor tag

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -127,6 +127,7 @@ body {
           transparent 0.15em,
           transparent
         );
+        word-wrap: break-word;
 
         &:hover {
           color: var(--accent);
